Fixed overlay visibility, improved navbar for authorised or no users

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 
 body{
   z-index: 999;
+  overflow-x: hidden;
 }
 
 img { 
@@ -9,26 +10,31 @@ img {
     height: auto;
     opacity: 0.5;
   }
+.background-logo{
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
+}
 
 .better {
-    font-size: 4rem;
-    padding-right: 4rem;
+  font-size: 4rem;
+  padding-right: 4rem;
+  color: #de6114;
 }
 .higher{
-    display: inline-block;
-  
-  -webkit-transform: scale(1, 3);
-  -moz-transform: scale(1, 3);
-  -o-transform: scale(1, 3);
-  transform: scale(1, 3);
+display: inline-block;
+-webkit-transform: scale(1, 3);
+-moz-transform: scale(1, 3);
+-o-transform: scale(1, 3);
+transform: scale(1, 3);
+color: #de6114;
 }
 .further{
-    margin-left: 15rem;
-    font-style: italic;
+  margin-left: 15rem;
+  font-style: italic;
+color: #de6114;
 }
 
 .divider{
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 footer{
@@ -55,8 +61,9 @@ footer a{
 /* hero image */
 
 .hero-1{
-  background: url(../img/hero-1.jpg);
-  width: 100%;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.85), transparent),
+  url(../img/hero-1.jpg);
+  width: 50%;
   height: 100vh;
   background-size:cover;
   background-repeat: no-repeat;
@@ -64,7 +71,9 @@ footer a{
 }
 
 .hero-2{
-  background: url(../img/hero-2.jpg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.85), transparent),
+   url(../img/hero-2.jpg);
+  width: 50%;
   background-size:cover;
   background-repeat: no-repeat;
   
@@ -76,12 +85,34 @@ footer a{
 
 .overlay-right{
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 75%;
+  color:#fff;
+  text-shadow: 2px 2px 4px #000;
+  
+
 }
 
 .overlay-left{
   position: absolute;
-  top: 50%;
+  top: 30%;
   right: 75%;
+  color:#fff;
+  text-shadow: 2px 2px 4px #000;
+  background-image: linear-gradient(
+    0deg,
+    hsla(0, 0%, 35.29%, 0) 0%,
+    hsla(0, 0%, 34.53%, 0.034375) 16.36%,
+    hsla(0, 0%, 32.42%, 0.125) 33.34%,
+    hsla(0, 0%, 29.18%, 0.253125) 50.1%,
+    hsla(0, 0%, 24.96%, 0.4) 65.75%,
+    hsla(0, 0%, 19.85%, 0.546875) 79.43%,
+    hsla(0, 0%, 13.95%, 0.675) 90.28%,
+    hsla(0, 0%, 7.32%, 0.765625) 97.43%,
+    hsla(0, 0%, 0%, 0.8) 100%
+  );
+}
+
+.container:hover .overlay {
+  opacity: 1;
 }
